--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="eng">
+<html lang="no">
     
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width-device-width, initial-scale-1.0">
-        <meta name="description" content="First mandatory assignment in Utvikling av Interaktive Nettsteder at Hiof"/>
+        <meta name="description" content="Første oblig i Utvikling av Interaktive Nettsteder, Hiof"/>
         <title>Oblig 1</title>
         
         <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
